--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="todo-app">
+        <h2>TODO LIST</h2>
+        <div class="row">
+          <input type="text" id="input-box" placeholder="Add your todo" />
+          <button onclick="addTodo()">ADD</button>
+        </div>
+        <ul id="list-container"></ul>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
